src/objects/Click__c.object
<CustomObject>
    <description>Records button click with the user and timestamp data</description>
    <fields>
        <fullName>Clicked_By_User__c</fullName>
        <description>Records the user name who clicked the button</description>
        <label>Clicked By(User)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LogFile__c</fullName>
        <label>LogFile</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TimeStamp__c</fullName>
        <description>Contains time stamp of the button click</description>
        <label>TimeStamp</label>
        <type>TextArea</type>
    </fields>
    <label>Click</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Clicked_By_User__c</columns>
        <columns>TimeStamp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Click {00000}</displayFormat>
        <label>Click</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clicks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>